# tmpl8

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml  test_and_release.yml
tests/: test_command.py  test_data.py  test_template.py
tests/integration/: test_cli.py
tests/placeholder_dir/: test.txt
tests/test_files/: test_data.json  test_data.yml  test_invalid_data
tests/unit/: test_command.py
tmpl8/: cli.py  command.py  data.py  extractor.py  template.py
