[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta

[project]
name = "tmpl8"
description = "CLI tool to template files referenced in shell commands."
readme = "README.md"
license = "LICENSE"
maintainers = ["Matthew Altberg"]

[tool.semantic_release]
version_variable = "tmpl8/__init__.py:__version__"
